@@ -1,3 +1,6 @@
+2005-10-13 Craig Franklin <craigfranklin@users.sourceforge.net>
+  * [gputils] Fixed bsr boundary for 18f2455/2550/4455/4550.
+
 2005-08-18 Borut Razem <borutr@users.sourceforge.net>
   * [gplib] Allow forward and back slashes as directory delimiters.
 
